2009-10-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_avatar_name, avt_set_avatar_name_mb):
	new functions
	avatar.c (avt_show_name): new function
	avatar.c (avt_draw_avatar, avt_change_avatar_image): adapted
	pascal/akfavatar.pas: adapted

2009-10-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): support for spacer

	* avatar.c (AVT_HIDDEN): new macro

2009-10-14  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_navigate): rewritten
	API-CHANGE!
	pascal/akfavatar.pas: adapted

2009-10-13  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (avta_color_selection):
	also show hexadecimal values for the colors

2009-10-12  Andreas K. Foerster  <info@akfoerster.de>

	* avtcolors.h: removed
	rgb2c: new tool to convert rgb.txt on the fly

2009-10-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_choice): support PageUp/PageDown keys

	* avatar.c (AVT_UPDATE_TRECT): new macro
	many callers adapted

	* avatar.c (avt_pager_mb):
	fix: remove close-button when done

	* avatar.c (avt_pager_mb):
	fix: show close-button after drawing the balloon

	* avatarsay.c (menu): move terminal one down again

	* avatarsay.c (not_available): use better conditionals

2009-10-10  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (manual_entry): new function

2009-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* replaced bdfread.c with bdf2c (awk)

	* avtaddons.h, colorchooser.c (avta_color_selection):
	new function
	avatarsay.c (ask_background_color, ask_balloon_color):
	adapted

	* avatarsay.c: reset colors to given settings

2009-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* replaced bin2c.c with my own data2c (awk)

2009-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/xpm2pas: new tool (awk)

	* pascal/akfavatar.pas (AvatarImageXPM, ShowImageXPM):
	new procedures

2009-10-03  Andreas K. Foerster  <info@akfoerster.de>
